samples/_failures_safe/1761445539_9989b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59e3e627.c: In function ‘main’:
./samples/SAFE/__tmp_59e3e627.c:167:5: error: expected expression at end of input
  167 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_59e3e627.c:167:5: error: expected declaration or statement at end of input
